--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "flatpickr": "^4.6.13",
     "json-loader": "^0.5.7",
     "react": "18.3.1",
+    "react-advanced-cropper": "^0.20.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "18.3.1",
     "react-icons": "^5.4.0",
