--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "axios": "^1.7.7",
+    "classname": "^0.0.0",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
     "json-loader": "^0.5.7",
