--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
-    "@mui/material": "^6.3.0",
+    "@mui/material": "^7.1.0",
     "axios": "^1.7.7",
     "classname": "^0.0.0",
     "date-fns": "^4.1.0",
@@ -43,6 +43,7 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "18.3.1",
     "react-icons": "^5.4.0",
+    "react-router": "^7.6.1",
     "react-toastify": "^11.0.2",
     "sweetalert2": "^11.15.3",
     "yaml-loader": "^0.8.0"
